feat: generalization, RPi 4 compatibility, and system monitoring
- Scrubbed personal references (mistergoodbond) from all files
- Replaced hardcoded paths with os.path.expanduser('~') and dynamic detection
- Added psutil for real-time CPU/RAM/Disk stats in Flask API
- Integrated 'System Health' dashboard panel with RPi thermal sensor support
- Added OS detection for Linux/RPi standard Kismet paths
- Updated start.sh to support xdg-open on Linux
- Final security verification of SecureKismetDB integration

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "paths": {
     "base_dir": ".",
     "log_dir": "logs",
-    "kismet_logs": "/Users/mistergoodbond/*.kismet",
+    "kismet_logs": "~/*.kismet",
     "whitelist": "data/home_whitelist.json",
     "roam_log": "data/roam_sessions.json",
     "alerts_log": "data/alerts.log",
